@@ -1,6 +1,8 @@
 Revision history for Perl extension MooX::BuildArgs.
 
 {{$NEXT}}
+ - Make BuildArgsHooks future compatibility tests work if the test
+   hooks are called.
 
 0.01      2014-11-07
  - First release.
